[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowerhub"
version = "1.1.0"
description = "Flowerhub Home Assistant integration"
authors = [ { name = "Michael Pihlblad" } ]
dependencies = [ ]

[tool.setuptools.packages.find]
where = ["custom_components"]
include = ["flowerhub*"]
